# unicon-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy.yaml
alembic/: env.py
alembic/versions/: 34d40a4b8879_add_definition_and_task_table.py  7724146d46ef_add_task_result_and_submission.py  9f847be1183f_add_submission_and_task_table.py  a3e28e9d0b43_init_alembic_with_user_table.py  ef5cededb085_add_definition_and_task_table.py
examples/: README.md  breakthrough.json
examples/addition/: allow_error.json  comparison.json  simple.json
examples/addition/definitions/: allow_error.json  comparison.json  simple.json  with_evaluation.json
examples/addition/submissions/: ace.json  correct.json  error.json  variable_overwrite.json  wrong.json
examples/breakthrough/: definition.json  submission.json
examples/files/: definition.json
examples/ml/: lr_gpu.json
examples/ml/definitions/: lr_gpu.json
examples/problem_set/: definition.json  submission.json
src/unicon_backend/: __init__.py
src/unicon_backend/dependencies/: auth.py
src/unicon_backend/helpers/: constants.py
src/unicon_backend/models/: __init__.py  user.py
src/unicon_backend/routers/: auth.py
src/unicon_backend/utils/: seed.py
tests/: inputs.yaml  test_assembly.py
unicon_backend/: __init__.py  app.py  cli.py  constants.py  database.py  dependencies.py  evaluator.py  logger.py  runner.py  unicon.perm  workers.py
unicon_backend/data/: breakthrough_definition.json  test_answer.json  test_definition.json  test_expected_answer.json  test_submission.json  test_user_input.json
unicon_backend/dependencies/: auth.py  common.py  group.py  organisation.py  problem.py  project.py  session.py
unicon_backend/evaluator/: answer.py  contest.py  problem.py  project.py
unicon_backend/helpers/: constants.py
unicon_backend/lib/: amqp.py  common.py  cst.py  file.py  graph.py  helpers.py  permissions.py
unicon_backend/migrations/: env.py
unicon_backend/models/: __init__.py  contest.py  file.py  links.py  organisation.py  problem.py  user.py  utils.py
unicon_backend/routers/: auth.py  contest.py  file.py  group.py  organisation.py  problem.py  project.py  role.py
unicon_backend/schemas/: __init__.py  auth.py  contest.py  group.py  organisation.py  problem.py
unicon_backend/templates/: __init__.py  run.jinja
unicon_backend/utils/: seed.py
unicon_backend/workers/: consumer.py  publisher.py
(+57 files in other folders)
